--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "not ie <= 10"
   ],
   "dependencies": {
-    "@ant-design/icons": "^4.8.1",
+    "@ant-design/icons": "^5.2.6",
     "@ant-design/pro-components": "^2.6.28",
     "@ant-design/use-emotion-css": "1.0.4",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/firebase": "^3.2.1",
     "@umijs/route-utils": "^2.2.2",
@@ -60,6 +61,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "omit.js": "^2.0.2",
+    "pdfjs-dist": "^3.4.120",
     "querystring": "^0.2.1",
     "rc-menu": "^9.12.0",
     "rc-util": "^5.37.0",
