--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
     "firebase": "^10.6.0",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "omit.js": "^2.0.2",
