--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
     "firebase": "^10.6.0",
+    "html2pdf.js": "^0.10.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -73,7 +74,8 @@
     "react-pdf": "^7.5.1",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.5",
