--- a/package.json
+++ b/package.json
@@ -72,9 +72,10 @@
     "react-helmet-async": "^1.3.0",
     "react-pdf": "^7.5.1",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.25.1",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
-
+    "redux-persist": "^6.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.5",
