--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@ant-design/icons": "^5.2.6",
     "@ant-design/pro-components": "^2.6.28",
     "@ant-design/use-emotion-css": "1.0.4",
+    "@aws-sdk/client-s3": "^3.637.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/firebase": "^3.2.1",
     "@umijs/route-utils": "^2.2.2",
@@ -56,6 +57,7 @@
     "bizcharts": "^4.1.23",
     "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
+    "dotenv": "^16.4.5",
     "firebase": "^10.6.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
