--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@
  PLACES_API_KEY = 'AIzaSyBdEZINT7lRnj8V0Xs840TMX-_3dbGqXMc'
  GOOGLE_MAPS_API_KEY="AIzaSyB6ed4LmxDJMYpRzGgKAOUcm7N41qaXbYE"
 
-DO_SPACES_ENDPOINT=https://esms.espeservice.com/spaces
-DO_SPACES_REGION=us-east-1           
-DO_SPACES_ACCESS_KEY=DO00GLJWXPHANA2K88VM
-DO_SPACES_SECRET_KEY=zDvB4OYkhQ/YwK6l0eCiCnm/h8nPs2edrFc+3StaixY
-DO_SPACES_BUCKET_NAME=espedocs
+# DO_SPACES_ENDPOINT=https://esms.espeservice.com/spaces
+# DO_SPACES_REGION=us-east-1           
+# DO_SPACES_ACCESS_KEY=DO00GLJWXPHANA2K88VM
+# DO_SPACES_SECRET_KEY=zDvB4OYkhQ/YwK6l0eCiCnm/h8nPs2edrFc+3StaixY
+# DO_SPACES_BUCKET_NAME=espedocs
