--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/firebase": "^3.2.1",
     "@umijs/route-utils": "^2.2.2",
     "antd": "^5.9.4",
+    "axios": "^1.7.7",
     "bizcharts": "^4.1.23",
     "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
