added terms of service

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
- API_URL = 'https://dev-api.espeservice.com/api/v1'
-#  API_URL = 'http://localhost:8001/api/v1';
+ #API_URL = 'https://dev-api.espeservice.com/api/v1'
+API_URL = 'http://localhost:8001/api/v1';
  NIDA_URL = 'https://ors.brela.go.tz/um/load/load_nida'
  APP_URL = 'https://esms.espeservice.com';
  YOUR_API_KEY= "AIzaSyDLT1iNx_3_PXFoatpJJdXCT56ZjeVFahY"
