--- a/package.json
+++ b/package.json
@@ -74,11 +74,13 @@
     "react-dev-inspector": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-medium-image-zoom": "^5.2.11",
     "react-pdf": "^7.5.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.25.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "tesseract.js": "^5.1.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
